fix some dark mode

--- a/src/app/views/components/Table/v3/tablev3.scss
+++ b/src/app/views/components/Table/v3/tablev3.scss
@@ -625,6 +625,9 @@
       border-bottom: 1px solid;
       border-radius: 20px;
     }
+    .table-header {
+      background-color: rgb(24 24 24 / 25%);
+    }
     .item {
       border-bottom-color: #24242440;
       color: var(--tertiary-color-50);
