--- a/src/app/views/styles/card.scss
+++ b/src/app/views/styles/card.scss
@@ -1283,6 +1283,12 @@
         }
       }
     }
+
+    &.title {
+      b {
+        background: #fff0f0;
+      }
+    }
   }
 }
 
